# jazz-jackrabbit-2-remake

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  Dockerfile  LICENSE  README.md  build.sh  config.yaml  docker.sh  install.sh  run.sh  suppressions.supp  tiles.yaml  valgrind_to_suppressions.py
.github/workflows/: pre-commit-check.yaml  proof.yaml  test-events.yaml  test-graphics.yaml  test-prod.yaml
assets/: character_select.yaml  config.yaml  icons.yaml  screens.yaml
assets/characters/: jazz.yaml  lori.yaml  spaz.yaml
assets/characters/enemies/: lizard_goon.yaml  mad_hatter.yaml
assets/characters/players/: jazz.yaml  lori.yaml  spaz.yaml
assets/editor/: cathedral_texture.yaml  editor_assets.yaml  electric_texture.yaml
assets/items/: items.yaml
assets/maps/: cathedral.yaml  custom_1.yaml  electric_map.yaml  grass_map.yaml  hidden_castle_map.yaml  map_1.yaml  maps.yaml  old_reliable_map.yaml
assets/sfx/: sfx.yaml
client/: assets.h  client.cpp  client.h  client_main.cpp  client_renderer.h  event_loop.cpp  event_loop.h  main.cpp
client/editor_objects/: editor_controller.cpp  editor_controller.h  editor_tile.cpp  editor_tile.h  save_exit_editor_button.cpp  save_exit_editor_button.h  tile_enum.h  tile_manager.cpp  tile_manager.h  tile_selector.cpp  tile_selector.h
client/game_objects/: GameEnemy.cpp  GameEnemy.h  GamePlayer.cpp  GamePlayer.h  bullet_factory.h  camera.cpp  camera.h  character.cpp  character.h  character_factory.h  game_bullets.cpp  game_bullets.h  game_enemy.cpp  game_enemy.h  game_player.cpp  game_player.h  item_factory.h  map.cpp  map.h  player.cpp  player.h  player_controller.cpp  player_controller.h
client/game_objects/bullets/: bullet_one.h  bullet_three.h  bullet_two.h  common_bullet.h
client/game_objects/enemies/: lizard_goon.h  mad_hatter.h
client/game_objects/items/: bullet_one.h  bullet_three.h  bullet_two.h  carrot.h  coin.h  health_icon.h  meat.h
client/game_objects/players/: jazz.h  lori.h  spaz.h
client/hud/: editor_hud.cpp  editor_hud.h  ingame_hud.cpp  ingame_hud.h  tile.cpp  tile.h
client/icons/: bullet_icon.cpp  bullet_icon.h  character_icon.cpp  character_icon.h  health_bar_icon.cpp  health_bar_icon.h
client/menu_objects/: character_selector.cpp  character_selector.h  create_match_button.cpp  create_match_button.h  editor_button.cpp  editor_button.h  join_match_button.cpp  join_match_button.h  map_selector.cpp  map_selector.h  match_selector.cpp  match_selector.h  quit_button.cpp  quit_button.h  receive_matches_button.cpp  receive_matches_button.h  return_to_menu.cpp  return_to_menu.h  save_exit_editor_button.cpp  save_exit_editor_button.h
client/protocol/: client_message_handler.cpp  client_message_handler.h  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  client_thread_manager.cpp  client_thread_manager.h  message_runner.cpp  message_runner.h
client/scenes/: character_select_scene.cpp  character_select_scene.h  editor_scene.cpp  editor_scene.h  map_select_scene.cpp  map_select_scene.h  match.cpp  match.h  match_scene.cpp  match_scene.h  match_select_scene.cpp  match_select_scene.h  menu.cpp  menu.h  menu_scene.cpp  menu_scene.h  score_scene.cpp  score_scene.h
client/scoreboard_objects/: return_menu_button.cpp  return_menu_button.h
client/shared/: background.cpp  background.h
client_src/: client_main.cpp  client_renderer.cpp  client_renderer.h
common/: assets.h  character_enum.h  common_constants.h  common_dto.h  common_liberror.cpp  common_liberror.h  common_queue.h  common_resolver.cpp  common_resolver.h  common_resolvererror.cpp  common_resolvererror.h  common_socket.cpp  common_socket.h  common_thread.h  configuration.cpp  configuration.h  item_enum.h  map_enum.h  sfx_enum.h  sound_enum.h
common/command/: command.h  jump_command.cpp  jump_command.h  shoot_command.cpp  shoot_command.h
common/message/: message.cpp  message.h  snapshot.cpp  snapshot.h
common/protocol/: common_dto.h  common_protocol.cpp  common_protocol.h
common_src/: common_queue.h  common_resolver.cpp  common_socket.cpp
docs/: documentation.md  project_manual.md  user_manual.md
game_engine/: colision_object.h  colision_shape.h  errors.h  game_object.h
game_engine/controllers/: controller.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
game_engine/gui/: camera.cpp  camera.h  canvas_object.cpp  canvas_object.h
game_engine/math/: vector2D.cpp  vector2D.h
game_engine/physics_engine/: colision_box.cpp  colision_box.h  colision_face.h  colision_object.cpp  colision_object.h  collision_face.h  collision_manager.cpp  collision_manager.h  collision_object.cpp  collision_object.h
game_engine/shapes/: square.h  triangle.h
game_engine_src/: game_engine.h
physics_engine/: physics_engine.cpp  physics_engine.h  vector2D.h
physics_engine/physics_object/: physics_object.cpp  physics_object.h
physics_engine/rigid_body/: rigid_body.cpp  rigid_body.h
physics_engine/vector_2D/: vector2D.cpp
server/: accepter.cpp  accepter.h  match.cpp  match.h  server.cpp  server.h  server_enemies.cpp  server_enemies.h  server_eventloop.cpp  server_eventloop.h  server_gameloop.cpp  server_gameloop.h  server_main.cpp  server_player.cpp  server_player.h  server_protocol.cpp  test_client_server.cpp  test_client_server.h
server/game_logic/: client_monitor.cpp  client_monitor.h  match.cpp  match.h  matches_manager.cpp  matches_manager.h  snapshot.cpp  snapshot.h
server/protocol/: accepter.cpp  accepter.h  manager_message_handler.cpp  manager_message_handler.h  match_message_handler.cpp  match_message_handler.h  server_message.cpp  server_message.h  server_protocol.cpp  server_protocol.h  server_receiver.cpp  server_receiver.h  server_sender.cpp  server_sender.h  server_thread_manager.cpp  server_thread_manager.h
tests/graphics/: animation_test.cpp  button_test.cpp  color_rect.cpp  color_rect_test.cpp  graphics_test.cpp  gui_phy_test.cpp  resource_pool_test.cpp  sprite_test.cpp  sprites_test.cpp
tests/unit_tests/: physics_test.cpp
(+200 files in other folders)
